# sr2_server

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.3BSD  env.ps1  env.sh  help.md  readme.md  requirements.txt  sr2server.code-workspace  todo.md
installers/: boost.py  brotli.py  crow.py  flatbuffers.py  flatc_gen_h.py  jsoncpp.py  libcurl.py  lz4.py  lzma.py  mariadb_connector.py  nghttp2.py  openssl.py  package_helpers.py  postgre_connector.py  qtbase.py  qtsql.py  qtsuper.py  range3.py  tabulate.py  tinyorm.py  zlib_ng.py  zstd.py
patches/: brotli.patch  crow.patch  flatbuffers.patch  mariadb.patch
sr2_server/: CMakeLists.txt
sr2_server/components/: DLLMacro.hpp  Sample.cpp  Sample.hpp
sr2_server/components/commands/: Help.cpp  Help.hpp  RunServer.cpp  RunServer.hpp
sr2_server/components/fb_schemas/: settings.fbs
sr2_server/components/settings/: Settings.hpp
sr2_server/src/: entry.cpp
